New endpoints for template (#61)
* create template table

* create template table

* adding endpoint /api/template

* edit openapi docs

* add a new line at the end of the file

* edit CHANGELOG

* add two hyperparameters, min_token_length and esp

* always send an array of templates

* modify docs

* fix a typo: esp -> eps

* fix the typo in openapi docs as well

* apply comments of the reviewer

* use the latest asciidoctor

* correct json conversion

* rebase master

* modify CHANGELOG

* remove an unncessary pub(crate)
